--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -72,9 +72,9 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  width: 36px;
+  width: 240px; 
   // set width only, for non-square avatars
-  // height: 36px;
+  height: 320px;
 
   @include breakpoint($large) {
     display: block;
@@ -83,11 +83,11 @@
   }
 
   img {
-    max-width: 175px;
-    border-radius: 50%;
+    max-width: 200px; 
+    border-radius: 2%; 
 
     @include breakpoint($large) {
-      padding: 5px;
+      padding: 0px;
       border: 1px solid $border-color;
     }
   }
