--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -26,6 +26,7 @@ div.highlighter-rouge, figure.highlight {
   }
 
   .highlight {
+    font-family: "Times New Roman", Times, serif;
     margin: 0;
     font-family: $monospace;
     font-size: $type-size-7;
