--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -39,3 +39,6 @@
 @import "vendor/font-awesome/brands";
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
+body {
+  font-family: 'Times New Roman', Times, serif;
+}
